--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "express-brute": "^0.6.0",
+    "fs": "0.0.2",
+    "https": "^1.0.0",
     "lodash": "^4.5.0",
     "md5": "^2.0.0",
     "node-cache": "^3.1.0",
     "node-uuid": "^1.4.7",
+    "pg": "^4.5.1",
     "pg-query": "^0.11.0",
     "q": "^1.4.1",
     "yargs": "^4.1.0"
